[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/jprez/JPrezAudioTab.gd" type="Script" id=1]
[ext_resource path="res://fonts/FiraSansCondensed-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://addons/jprez/jp-chunklist.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/jprez/Outline.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/waveform/waveform_panel.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 3 )

[node name="JPrezAudioTab" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_constants/separation = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="."]
margin_right = 1912.0
margin_bottom = 642.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Outline" parent="HBox" instance=ExtResource( 5 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 256.0
margin_bottom = 642.0
rect_min_size = Vector2( 256, 0 )
size_flags_vertical = 3

[node name="ChunkList" parent="HBox" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 256.0
margin_right = 1272.0
margin_bottom = 642.0
size_flags_horizontal = 3

[node name="CodeEditor" type="TextEdit" parent="HBox"]
margin_left = 1272.0
margin_right = 1912.0
margin_bottom = 642.0
rect_min_size = Vector2( 640, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditPanel" type="PanelContainer" parent="."]
margin_top = 642.0
margin_right = 1912.0
margin_bottom = 776.0

[node name="Panel" type="HBoxContainer" parent="EditPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1905.0
margin_bottom = 127.0
rect_min_size = Vector2( 0, 120 )
size_flags_horizontal = 3

[node name="Prompter" type="LineEdit" parent="EditPanel/Panel"]
margin_right = 1838.0
margin_bottom = 120.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="EditPanel/Panel"]
margin_left = 1842.0
margin_right = 1898.0
margin_bottom = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateButton" type="Button" parent="EditPanel/Panel/VBoxContainer"]
margin_right = 56.0
margin_bottom = 20.0
disabled = true
text = "update"

[node name="WaveformPanel" parent="." instance=ExtResource( 6 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 776.0
margin_right = 1912.0
margin_bottom = 1076.0

[connection signal="text_changed" from="EditPanel/Panel/Prompter" to="." method="_on_Prompter_text_changed"]
[connection signal="pressed" from="EditPanel/Panel/VBoxContainer/UpdateButton" to="." method="_on_UpdateButton_pressed"]
